# cannoli

./: .gitignore  CMakeLists.txt  README.md  notes.md
include/: aabb.h  bvh.h  camera.h  canvas.h  color.h  common_definitions.h  hit_record.h  image.h  lambertian_brdf.h  light_ray.h  material.h  mesh.h  metal_brdf.h  obj_file_loader.h  object.h  object_type.h  point.h  ray_tracer.h  scene.h  sphere.h  tri_mesh.h  triangle.h  utils.h  vec3.h  vec3f.h
src/: aabb.cpp  accel_structs.cpp  accel_structs.h  bvh.cpp  cannoli.cpp  cannoli_main.cpp  lambertian_brdf.cpp  light_ray.cpp  mesh.cpp  metal_brdf.cpp  ray_tracer.cpp  sphere.cpp  tri_mesh.cpp  triangle.cpp
test/: vec3_test.cpp  vec3f_test.cpp
